--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
     <title>Weather-App</title>
 </head>
 
-<body>
+<body class="mybody">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
             <img src="/images/icons8-partly-cloudy-day-50.png" width="30" height="30" alt="">Weather-app
@@ -29,7 +29,7 @@
             </div>
         </div>
     </nav>
-    <div class="row">
+    <div class="row" style="margin-right: 0px;">
         <div class="col">
             <div class="card" style="width: 25rem;">
                 <div class="card-header">
@@ -112,7 +112,7 @@
     </div>
     <footer class="page-footer font-small special-color-dark pt-4">
         <div class="footer-copyright text-center py-3">&copy; 2020 Copyright:
-            <a href="https://mdbootstrap.com/">Sarthak Gandhi</a>
+            Sarthak Gandhi
         </div>
     </footer>
     <script src="/js/app.js"></script>
