common css problem solving

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,8 +11,8 @@
     <title>Weather-App</title>
 </head>
 
-<body class="mybody">
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+<body>
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
         <a class="navbar-brand" href="#">
             <img src="/images/icons8-partly-cloudy-day-50.png" width="30" height="30" alt="">Weather-app
         </a>
@@ -52,11 +52,15 @@
             </div>
         </div>
         <div class="col">
-            <p class="text-center" id="message-1"></p>
-            <p class="text-center" id="message-2"></p>
-            <p class="text-center" id="message-3"></p>
-            <p class="text-center" id="message-4"></p>
-            <p class="text-center" id="message-5"></p>
+            <table class="table table-borderless">
+                <tbody>
+                    <tr><p class="text-center" id="message-1"></p></tr>
+                    <tr><p class="text-center" id="message-2"></p></tr>
+                    <tr><p class="text-center" id="message-3"></p></tr>
+                    <tr><p class="text-center" id="message-4"></p></tr>
+                    <tr><p class="text-center" id="message-5"></p></tr>
+                </tbody>
+            </table>
         </div>
     </div class="container">
     <a id="help"></a>
@@ -78,32 +82,40 @@
                     <thead>
                         <tr>
                             <td colspan="2">
-                                <p class="text-center">Email:- gandhi.sarthak15@gmail.com</p>
+                                <p class="text-center"><a href="mailto:gandhi.sarthak15@gmail.com">Email:- gandhi.sarthak15@gmail.com</a></p>
                             </td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/images/facebook.svg" class="img-fluid" alt="Responsive image"></td>
-                            <td><a href="https://www.facebook.com/sarthak.gandhi.3745/" target="_blank">@sarthak.gandhi.3375</a></td>
+                            <td><img src="/images/facebook.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><a href="https://www.facebook.com/sarthak.gandhi.3745/"
+                                    target="_blank">@sarthak.gandhi.3375</a></td>
                         </tr>
                         <tr>
-                            <td><img src="/images/instagram-logo.svg" class="img-fluid" alt="Responsive image"></td>
-                            <td><a href="https://www.instagram.com/sarthakgandhi_/" target="_blank">@sarthakgandhi_</a></td>
+                            <td><img src="/images/instagram-logo.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><a href="https://www.instagram.com/sarthakgandhi_/" target="_blank">@sarthakgandhi_</a>
+                            </td>
                         </tr>
                         <tr>
-                            <td><img src="/images/linkedin.svg" class="img-fluid" alt="Responsive image"></td>
-                            <td><a href="https://www.linkedin.com/in/sarthak-gandhi-a72469190/" target="_blank">@sarthakgandhi</a></td>
+                            <td><img src="/images/linkedin.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><a href="https://www.linkedin.com/in/sarthak-gandhi-a72469190/"
+                                    target="_blank">@sarthakgandhi</a></td>
                         </tr>
                         <tr>
-                            <td><img src="/images/twitter.svg" class="img-fluid" alt="Responsive image"></td>
+                            <td><img src="/images/twitter.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
                             <td><a href="https://twitter.com/sarthakgandhi_" target="_blank">@sarthakgandhi</a></td>
+                        </tr>
+                        <tr>
+                            <td><img src="/images/github-logo.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><a href="https://github.com/sgandhi15"
+                                    target="_blank">@sgandhi15</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="col">
-                <img src="images/IMG_2820.jpg" alt="Responsive image" width="380px">
+                <img src="images/rsz_img_2820.jpg" alt="Responsive image" height="340px">
             </div>
         </div>
     </div>
