--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,9 +30,9 @@
         </div>
     </nav>
     <a id="forecast"></a>
-    <div class="row" style="margin-right: 0px;">
+    <div class="container">
         <div class="col">
-            <div class="card" style="width: 25rem;">
+            <div class="card" style="width: auto;">
                 <div class="card-header">
                     WEATHER-APP
                 </div>
@@ -51,18 +51,18 @@
                 </div>
             </div>
         </div>
-        <div class="col">
-            <table class="table table-borderless">
-                <tbody>
-                    <tr><p class="text-center" id="message-1"></p></tr>
-                    <tr><p class="text-center" id="message-2"></p></tr>
-                    <tr><p class="text-center" id="message-3"></p></tr>
-                    <tr><p class="text-center" id="message-4"></p></tr>
-                    <tr><p class="text-center" id="message-5"></p></tr>
-                </tbody>
-            </table>
-        </div>
-    </div class="container">
+    </div>
+    <div class="container">
+        <table class="table table-borderless">
+            <tbody>
+                <p class="text-center" id="message-1"></p>
+                <p class="text-center" id="message-2"></p>
+                <p class="text-center" id="message-3"></p>
+                <p class="text-center" id="message-4"></p>
+                <p class="text-center" id="message-5"></p>
+            </tbody>
+        </table>
+    </div>
     <a id="help"></a>
     <div>
         <p class="text-center display-4">How to use...?</p>
@@ -82,34 +82,39 @@
                     <thead>
                         <tr>
                             <td colspan="2">
-                                <p class="text-center"><a href="mailto:gandhi.sarthak15@gmail.com">Email:- gandhi.sarthak15@gmail.com</a></p>
+                                <p class="text-center"><a href="mailto:gandhi.sarthak15@gmail.com">Email:-
+                                        gandhi.sarthak15@gmail.com</a></p>
                             </td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="/images/facebook.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><img src="/images/facebook.svg" class="img-fluid" alt="Responsive image" width="30px">
+                            </td>
                             <td><a href="https://www.facebook.com/sarthak.gandhi.3745/"
                                     target="_blank">@sarthak.gandhi.3375</a></td>
                         </tr>
                         <tr>
-                            <td><img src="/images/instagram-logo.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><img src="/images/instagram-logo.svg" class="img-fluid" alt="Responsive image"
+                                    width="30px"></td>
                             <td><a href="https://www.instagram.com/sarthakgandhi_/" target="_blank">@sarthakgandhi_</a>
                             </td>
                         </tr>
                         <tr>
-                            <td><img src="/images/linkedin.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><img src="/images/linkedin.svg" class="img-fluid" alt="Responsive image" width="30px">
+                            </td>
                             <td><a href="https://www.linkedin.com/in/sarthak-gandhi-a72469190/"
                                     target="_blank">@sarthakgandhi</a></td>
                         </tr>
                         <tr>
-                            <td><img src="/images/twitter.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
+                            <td><img src="/images/twitter.svg" class="img-fluid" alt="Responsive image" width="30px">
+                            </td>
                             <td><a href="https://twitter.com/sarthakgandhi_" target="_blank">@sarthakgandhi</a></td>
                         </tr>
                         <tr>
-                            <td><img src="/images/github-logo.svg" class="img-fluid" alt="Responsive image" width="30px"></td>
-                            <td><a href="https://github.com/sgandhi15"
-                                    target="_blank">@sgandhi15</a></td>
+                            <td><img src="/images/github-logo.svg" class="img-fluid" alt="Responsive image"
+                                    width="30px"></td>
+                            <td><a href="https://github.com/sgandhi15" target="_blank">@sgandhi15</a></td>
                         </tr>
                     </tbody>
                 </table>
